--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
+    "react-native": "^0.68.1",
+    "react-native-web": "^0.17.7",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
